2007-10-06  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/Makefile.am : now tested on Linux ;)

	* plug-ins/cairo/diacairo.h plug-ins/cairo/Makefile.am : oops, forgot
	to add this

2007-10-06  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo-interactive.c : based on a patch from
	Nguyen Thai Ngoc Duy (bug #329860) there is an interactive renderer
	based on cairo now. After some work in the cairo renderer base class
	(pango_cairo, hairlines, ...) this should finally allow us to get rid
	of the libart depedency
	* plug-ins/cairo/diacairo.c app/display.c : HACK to select the 
	DiaCairoInteractiveRenderer for antialiased rendering. If the points
	mentioned above are not fixed for the next release it should be
	disabled again in app/display.c(new_aa_renderer)
	* plug-ins/cairo/diacairo-print.c : almost empty, should become the
	place for GtkPrint/Cairo based printing.
	* plug-ins/cairo/Makefile.am plug-ins/makefile.msc : adapted

	* plug-ins/python/gtkcons.py : replace deprecated symbols, patch from
	Roland Stigge, fixes bug #483049

	* lib/arrows.c : major restructuring - getting calculate and draw by
	function pointer. A lot of arrows are converted to the new style thus
	arrow_bbox() can give the correct bounding box.
	* objects/standard/arc.c : bug #340705 and bug #477569
	  objects/standard/bezier.c : bug #300055 
	  objects/standard/line.c objects/standard/polyline.c 
	  objects/standard/zigzagline.c : not using *BBExtra to adjust the 
	bounding box for arrows but instead a combination of arrow_bbox()
	and calculate_arrow_point() 
	* lib/bounding_box.c : just a comment for now
	* samples/arrows.dia : more coverage

	* makefile.msc bindings/makefile.msc : integrated bindings in the build

	* configure.in acinclude.m4 Makefile.am bindings/Makefile.am : 
	build bindings given --with-swig (and SWIG is found)
	* bindings/dia-diagramdata.h bindings/dia-extra.cpp 
	  bindings/dia-properties.cpp bindings/dia-diagramdata.cpp