@@ -39,6 +39,7 @@ OBJECTS = \
 	pydia-image.obj \
 	pydia-layer.obj \
 	pydia-object.obj \
+	pydia-paperinfo.obj \
 	pydia-properties.obj \
 	pydia-property.obj \
 	pydia-render.obj \
